Bug 1031407 - DataStoreService doesn't need to use IDBCursor to know if a revision exists., r=janv